# devdash

./: README.md  pyproject.toml
.github/workflows/: ci.yml
devdash/: __init__.py  cli.py  dashboard.py
devdash/widgets/: clock.py  github.py  quotes.py  system.py  weather.py
tests/: test_devdash.py
